# svaudio

./: .buildpacks  .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  README.md  README.rst  app.json  deploy.sh  django.sh  docker-compose.yml  dockermanage.sh  gulpfile.js  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.cfg
.envs/: .django  .postgres
.github/workflows/: ci.yml  deploy.yml
compose/django/: Dockerfile  start.sh
compose/node/: Dockerfile
compose/postgres/: Dockerfile
config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: Makefile  conf.py  howto.rst  index.rst  install.md  make.bat  users.rst
docs/pycharm/: configuration.rst
requirements/: base.txt  local.txt  production.txt
svaudio/: conftest.py  mixins.py  schema.py  verbs.py
svaudio/apps/artists/: apps.py  urls.py
svaudio/apps/repo/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
svaudio/artists/: apps.py  urls.py  views.py
svaudio/claims/: apps.py  models.py  urls.py  views.py
svaudio/claims/migrations/: 0001_initial.py  0002_claim_created_at.py
svaudio/claims/templatetags/: claims.py
svaudio/repo/: apps.py  models.py  schema.py  tasks.py  urls.py  views.py
svaudio/repo/migrations/: 0004_auto_20210414_2151.py  0006_auto_20210419_1259.py  0007_auto_20210419_1538.py  0008_auto_20210423_0025.py  0009_auto_20210423_0341.py  0010_auto_20210424_2130.py  0011_auto_20210425_0036.py  0012_auto_20210425_0042.py  0013_auto_20210425_0434.py  0014_auto_20210425_0444.py  0015_auto_20210503_2149.py
svaudio/repo/tests/: test_auto_ownership.py
svaudio/sampledata/: apps.py
svaudio/static/sass/: project.scss
svaudio/tags/: apps.py  models.py  urls.py  views.py
svaudio/tags/migrations/: 0001_initial.py  0002_taggeditem_added_by.py  0003_auto_20210419_1538.py  (+3 more)
svaudio/templates/: base.html
svaudio/users/: admin.py  apps.py  models.py  urls.py  views.py
svaudio/utils/: timestamp.py
(+61 files in other folders)
