[tool.poetry]
name = "svaudio"
version = "0.1.0"
description = "The world's best unofficial library of SunVox resources"
authors = ["Matthew Scott <matt@11craft.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.4"
radiant-voices = {url = "https://github.com/metrasynth/radiant-voices/archive/fd9ff7e94410d55cdc7bb5b33dedb67e5b326f5e.zip"}
pytz = "^2022.1"
python-slugify = "^6.1.1"
Pillow = "^9.0.1"
rcssmin = "^1.1.0"
argon2-cffi = "^21.3.0"
whitenoise = "^6.0.0"
redis = "^4.2.0"
hiredis = "^2.0.0"
celery = "^5.2.3"
tornado = "^6.1"
django-celery-beat = "^2.2.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
Django = "<4.0"
django-contrib-comments = "^2.2.0"
django-environ = "^0.8.1"
django-extensions = "^3.1.5"
django-filter = "^21.1"
django-markdownify = "^0.9.0"
django-model-utils = "^4.2.0"
django-allauth = "^0.50.0"
django-crispy-forms = "^1.14.0"
django-compressor = "^3.1"
django-redis = "^5.2.0"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.11.0"
graphene = "^2.1.9"
graphene-django = "^2.15.0"
django-debug-toolbar = "^3.2.4"
requests = "^2.27.1"
pytest = "^7.1.1"
django-taggit = "^2.1.0"
django-vote = "^2.3.0"
django-activity-stream = "^1.4.0"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.3"
django-anymail = "^8.5"
setuptools = "^61.1.1"
flower = "^1.0.0"
bleach = "^4.1.0"

[tool.poetry.dev-dependencies]
Werkzeug = "~2.0.3"
ipdb = "^0.13.9"
watchgod = "^0.8.1"
watchdog = "^2.1.7"
argh = "^0.26.2"
mypy = "^0.942"
django-stubs = "^1.10.0"
pytest = "^7.1.1"
pytest-sugar = "^0.9.4"
Sphinx = "^4.4.0"
sphinx-autobuild = "^2021.3.14"
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
coverage = "^6.3.2"
black = "^22.1.0"
pylint-django = "^2.5.3"
pylint-celery = "^0.3"
pre-commit = "^2.17.0"
factory-boy = "^3.2.1"
django-debug-toolbar = "^3.2.4"
django-coverage-plugin = "^2.0.2"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
